2005-04-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/abc2ly.py (out_filename): fix thinko with \version.

2005-04-26  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/basic-notation.itely,
	instrument-notation.itely, advanced-notation.itely,
	changing-defaults.itely: minor fixes.  Added docs
	for colors to advanced-notation.itely.

	* Documentation/user/advanced-notation.itely: fixed compile
	problem and added Bernard's x11-color doc patch.

2005-04-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (grob-cause): Yet another fix, hope it's
	alright this time round.

2005-04-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/INSTALL.texi (Top): idem.

	* Documentation/topdocs/README.texi (Top): remove clean-fonts refs.

	* VERSION (MAJOR_VERSION): release 2.5.21

	* scm/output-ps.scm (grob-cause): bugfix.

2005-04-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/*: Update.

	* cygwin/GNUmakefile (INSTALLATION_OUT_SUFFIXES): Remove profile
	stuff.

	* scm/output-ps.scm (grob-cause): Bugfix.

	* scm/lily.scm (ly:load): Remove x11-color.

	* stepmake/aclocal.m4 (STEPMAKE_GET_EXECUTABLE): Bugfix: do not
	quote executable, fixes getting version from program --with
	--options.
	(STEPMAKE_KPATHSEA): Bugfix for Cygwin cross building: use
	$ac_exeect.

	* Documentation/user/GNUmakefile: Only build music-glossary with
	rendered lilypond snippets during web.

2005-04-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* po/de.po: update.

	* lily/GNUmakefile (OUT_DIST_FILES): don't dist lexer.cc

2005-04-22  Laura Conrad <lconrad@laymusic.org>
 
	* scripts/abc2ly:
	second title line append with punctuation dash character;
	encode abc2ly python strings in utf-8
       
2005-04-21  Laura Conrad <lconrad@laymusic.org>

	* scripts/abc2ly fix chords (again)
 
2005-04-22  Bernard Hurley  <bernard@fong-hurley.org.uk>

	* scm/x11-color.scm: new file
	All x11 color names can be accessed with:
	#(x11-color 'ColorName),