@@ -74,7 +74,8 @@ All_font_metrics::find_pango_font (PangoFontDescription *description,
   SCM val;
   if (!pango_dict_->try_retrieve (key, &val))
     {
-      progress_indication ("[" + String (pango_fn));
+      if (be_verbose_global)
+	progress_indication ("[" + String (pango_fn));
       
       Pango_font *pf = new Pango_font (pango_ft2_fontmap_,
 				       RIGHT,
