@@ -1,4 +1,13 @@
+2005-04-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/lily-guile.cc (ly_chain_assoc): remove.
+
+	* lily/general-scheme.cc (LY_DEFINE): export ly:chain_assoc_get
+	(LY_DEFINE): recurse, iso. calling ly_chain_assoc.
+
 2005-04-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* lily/beaming-info.cc: remove infinity_i
 
 	* scripts/abc2ly.py (out_filename): fix thinko with \version.
 
